🎨 style(collector): 미국 공매도 테스트 PMD 위반 보정 (T10)
T10 Commit 2 — pmdTest 0 위반 달성

- SmokeContextTest → SmokeMockitoBase 개명
  (AbstractClassWithoutAbstractMethod + TestClassWithoutTestCases 제거)
- FinraRegShoDailyResponseTest: .get(0) → .getFirst() (UseGetFirst ×2)
- FinraConsolidatedShortInterestResponseTest: .get(0) → .getFirst() (×3)
- FinraShortSaleClientTest:
  · .get(0) → .getFirst() (×2)
  · recordTotal() HttpHeaders 반환 제거 → .header("record-total", ...) 인라인 (LooseCoupling)
  · 숫자 리터럴 언더스코어 (UseUnderscoresInNumericLiterals ×8)
- ShortSaleOverseasRepositoryIT:
  · siOriginRowKeepsDailyCollectedAtNull 6-assert → .satisfies() 2블록 (UnitTestContainsTooManyAsserts)
  · 숫자 리터럴 언더스코어 (×3: 7_000, 12_000 ×2)
- ShortSaleOverseasInterestIT:
  · 필드 선언 클래스 최상단 이동 (FieldDeclarationsShouldBeAtStartOfClass ×6)
  · insertsNewSettlementRow 7-assert → .satisfies() 2블록 (UnitTestContainsTooManyAsserts)
  · 숫자 리터럴 언더스코어 (7_000L, 12_000L ×2)
- ShortSaleOverseasSchedulerTest:
  · absorbsCollectionException에 assertThatCode 추가 (UnitTestShouldIncludeAssert)

게이트: ./gradlew clean check → BUILD SUCCESSFUL 3m6s
        pmdTest 0 위반 / 1219 테스트 0 실패

🗿 MoAI <email@mo.ai.kr>